# custom-ota-update-system

./: ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: cpp17-design-patterns-and-solid.md  deep-architecture.md  linux-ota.md  validation-plan.md
docs/design/: README.md  implementation-roadmap.md  interface-control.md  requirements.md  runtime-design.md  system-design.md  validation-plan.md
docs/design/diagrams/: system-design.drawio
docs/diagrams/: README.md  full-system-uml.drawio
include/ota/: OtaUpdate.hpp
src/: OtaUpdate.cpp  main.c  main.cpp
tests/: OtaUpdateTests.cpp  ProfileTests.cpp  test_repo_smoke.py
